preparing for release
- introduced build arg baseimage_tag
- reworked README.md
- adapted env var defaults